[package]
name = "hydrus-pixiv-tagger"
version = "0.3.0"
edition = "2018"
license = "Apache-2.0"
description = "Automatically tag hydrus file by using pixiv and saucenao"
authors = ["trivernis <trivernis@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/Trivernis/hydrus-pixiv-tagger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixiv-rs = "0.1.0"
hydrus-api = "0.9.1"
rustnao = "0.2.1"
structopt = "0.3.26"
tempdir = "0.3.7"
env_logger = "0.9.0"
log = "0.4.16"
thiserror = "1.0.30"

[dependencies.tokio]
version = "1.17.0"
features = ["macros", "rt", "time"]
