[package]
name = "hydrus-utils"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Automatically tag hydrus file by using pixiv and saucenao"
authors = ["trivernis <trivernis@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/Trivernis/hydrus-pixiv-tagger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixiv-rs = "0.1.0"
hydrus-api = "0.9.3"
rustnao = "0.2.1"
tempdir = "0.3.7"
thiserror = "1.0.32"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
tracing = "0.1.36"
clap = { version = "3.2.17", features = ["derive", "env"] }
serde = { version = "1.0.143", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0.83"
config = "0.13.2"
directories = "4.0.1"
color-eyre = "0.6.2"

[dependencies.tokio]
version = "1.20.1"
features = ["macros", "rt", "time", "fs"]
