[package]
name = "hydrus-utils"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "Automatically tag hydrus file by using pixiv and saucenao"
authors = ["trivernis <trivernis@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/Trivernis/hydrus-pixiv-tagger"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixiv-rs = "0.1.0"
hydrus-api = { version = "0.9.3", default-features = false, features = ["json"] }
rustnao = "0.2.1"
tempdir = "0.3.7"
thiserror = "1.0.38"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
clap = { version = "4.1.6", features = ["derive", "env"] }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
config = "0.13.3"
directories = "4.0.1"
color-eyre = "0.6.2"
egg-mode = "0.16.1"
lazy-regex = "2.4.1"

[dependencies.tokio]
version = "1.25.0"
features = ["macros", "rt", "time", "fs"]
